commit translated contents

--- a/docs/csharp/language-reference/compiler-messages/cs0188.md
+++ b/docs/csharp/language-reference/compiler-messages/cs0188.md
@@ -1,17 +1,17 @@
 ---
 title: Errore del compilatore CS0188
-ms.date: 07/20/2015
+ms.date: 02/25/2020
 f1_keywords:
 - CS0188
 helpviewer_keywords:
 - CS0188
 ms.assetid: 4e693c18-584d-4c94-9863-283c69b97b0b
-ms.openlocfilehash: 6eb58be68f2ca1dd9e020cd8213a241e00b06ba8
-ms.sourcegitcommit: 986f836f72ef10876878bd6217174e41464c145a
-ms.translationtype: HT
+ms.openlocfilehash: 179ce80d8f6618e40cef0846767499a9593d38d8
+ms.sourcegitcommit: c2d9718996402993cf31541f11e95531bc68bad0
+ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/19/2019
-ms.locfileid: "69608078"
+ms.lasthandoff: 02/27/2020
+ms.locfileid: "77673068"
 ---
 # <a name="compiler-error-cs0188"></a>Errore del compilatore CS0188
 
@@ -19,10 +19,8 @@ Non è possibile usare l'oggetto 'this' prima dell'assegnazione di tutti i campi
   
  Tutti i campi in uno `struct` devono essere assegnati da un costruttore prima che il costruttore possa chiamare un metodo in `struct`.  
   
- Se questo errore viene visualizzato durante il tentativo di inizializzare una proprietà in un costruttore di struct, la soluzione consiste nel modificare il parametro del costruttore per specificare il campo sottostante anziché la proprietà stessa. Le proprietà implementate automaticamente devono essere evitate negli struct perché non hanno un campo sottostante e pertanto non può essere inizializzate in alcun modo dal costruttore.  
-  
- Per altre informazioni, vedere [Uso di struct](../../programming-guide/classes-and-structs/using-structs.md).  
-  
+ Se questo errore viene visualizzato quando si tenta di inizializzare una proprietà in un costruttore struct, la soluzione consiste nell'inizializzare direttamente il campo sottostante della proprietà anziché la proprietà stessa.
+
 ## <a name="example"></a>Esempio
 
  L'esempio seguente genera l'errore CS0188:  
@@ -57,5 +55,4 @@ namespace MyNamespace
 
 ## <a name="see-also"></a>Vedere anche
 
-- [Struct](../../programming-guide/classes-and-structs/structs.md)
-- [Proprietà implementate automaticamente](../../programming-guide/classes-and-structs/auto-implemented-properties.md)
+- [Tipi di struttura](../builtin-types/struct.md)
