--- a/docs/csharp/language-reference/compiler-messages/cs1519.md
+++ b/docs/csharp/language-reference/compiler-messages/cs1519.md
@@ -6,12 +6,12 @@ f1_keywords:
 helpviewer_keywords:
 - CS1519
 ms.assetid: 186cef8e-c6c7-49aa-8b43-f6c2cb628414
-ms.openlocfilehash: ae1e5e109541b22cc34fa86d610bed438bc6497c
-ms.sourcegitcommit: 986f836f72ef10876878bd6217174e41464c145a
-ms.translationtype: HT
+ms.openlocfilehash: 18b994702306ee878f72ca26b23b03e99a204437
+ms.sourcegitcommit: c2d9718996402993cf31541f11e95531bc68bad0
+ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/19/2019
-ms.locfileid: "69607569"
+ms.lasthandoff: 02/27/2020
+ms.locfileid: "77673238"
 ---
 # <a name="compiler-error-cs1519"></a>Errore del compilatore CS1519
 Token "token" non valido nella classe, nello struct o nella dichiarazione di un membro di interfaccia  
@@ -45,6 +45,6 @@ class Test 42
 ## <a name="see-also"></a>Vedere anche
 
 - [Classi](../../programming-guide/classes-and-structs/classes.md)
-- [Struct](../../programming-guide/classes-and-structs/structs.md)
+- [Tipi di struttura](../builtin-types/struct.md)
 - [Interfacce](../../programming-guide/interfaces/index.md)
 - [Metodi](../../programming-guide/classes-and-structs/methods.md)
