--- a/docs/csharp/language-reference/compiler-messages/cs1060.md
+++ b/docs/csharp/language-reference/compiler-messages/cs1060.md
@@ -6,12 +6,12 @@ f1_keywords:
 helpviewer_keywords:
 - CS1060
 ms.assetid: af389239-672b-449e-84b5-edb52e320013
-ms.openlocfilehash: 12566606591aadae5e94b4c2cade05fc8c6c2481
-ms.sourcegitcommit: 986f836f72ef10876878bd6217174e41464c145a
-ms.translationtype: HT
+ms.openlocfilehash: c450b7ba3476411e3b54fe6ee2a953536d695388
+ms.sourcegitcommit: c2d9718996402993cf31541f11e95531bc68bad0
+ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/19/2019
-ms.locfileid: "69603571"
+ms.lasthandoff: 02/27/2020
+ms.locfileid: "77673057"
 ---
 # <a name="compiler-warning-level-1-cs1060"></a>Avviso del compilatore (livello 1) CS1060
 Utilizzo del campo 'nome' probabilmente non assegnato. Le variabili di istanza struct non sono assegnate inizialmente se struct non è assegnato.  
@@ -61,4 +61,4 @@ namespace CS1060
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Struct](../../programming-guide/classes-and-structs/structs.md)
+- [Tipi di struttura](../builtin-types/struct.md)
