--- a/docs/csharp/language-reference/compiler-messages/cs1612.md
+++ b/docs/csharp/language-reference/compiler-messages/cs1612.md
@@ -6,12 +6,12 @@ f1_keywords:
 helpviewer_keywords:
 - CS1612
 ms.assetid: ef5db985-030a-4f15-b53f-e92c9297c6a3
-ms.openlocfilehash: 5c50bdc1b49f79bf8c5ef0171f9bbab9d0e4362a
-ms.sourcegitcommit: de17a7a0a37042f0d4406f5ae5393531caeb25ba
+ms.openlocfilehash: 5c84d8f98aeb8beaaaa0a076b9ccc28b3bcb9b23
+ms.sourcegitcommit: c2d9718996402993cf31541f11e95531bc68bad0
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 01/24/2020
-ms.locfileid: "76742083"
+ms.lasthandoff: 02/27/2020
+ms.locfileid: "77673082"
 ---
 # <a name="compiler-error-cs1612"></a>Errore del compilatore CS1612
 Impossibile modificare il valore restituito da "expression" perché non è una variabile  
@@ -86,6 +86,6 @@ public class MyClass
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Struct](../../programming-guide/classes-and-structs/structs.md)
+- [Tipi di struttura](../builtin-types/struct.md)
 - [Tipi di valore](../builtin-types/value-types.md)
-- [Tipi di riferimento](../keywords/reference-types.md)
+- [Tipi riferimento](../keywords/reference-types.md)
