commit bilingual contents

--- a/docs/csharp/language-reference/compiler-messages/cs1612.md
+++ b/docs/csharp/language-reference/compiler-messages/cs1612.md
@@ -6,24 +6,24 @@ f1_keywords:
 helpviewer_keywords:
 - CS1612
 ms.assetid: ef5db985-030a-4f15-b53f-e92c9297c6a3
-ms.openlocfilehash: 5c50bdc1b49f79bf8c5ef0171f9bbab9d0e4362a
-ms.sourcegitcommit: de17a7a0a37042f0d4406f5ae5393531caeb25ba
+ms.openlocfilehash: 5c84d8f98aeb8beaaaa0a076b9ccc28b3bcb9b23
+ms.sourcegitcommit: c2d9718996402993cf31541f11e95531bc68bad0
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 01/24/2020
-ms.locfileid: "76742083"
+ms.lasthandoff: 02/27/2020
+ms.locfileid: "77673082"
 ---
-# <a name="compiler-error-cs1612"></a><span data-ttu-id="4367b-102">Errore del compilatore CS1612</span><span class="sxs-lookup"><span data-stu-id="4367b-102">Compiler Error CS1612</span></span>
-<span data-ttu-id="4367b-103">Impossibile modificare il valore restituito da "expression" perché non è una variabile</span><span class="sxs-lookup"><span data-stu-id="4367b-103">Cannot modify the return value of 'expression' because it is not a variable</span></span>  
+# <a name="compiler-error-cs1612"></a><span data-ttu-id="8123e-102">Errore del compilatore CS1612</span><span class="sxs-lookup"><span data-stu-id="8123e-102">Compiler Error CS1612</span></span>
+<span data-ttu-id="8123e-103">Impossibile modificare il valore restituito da "expression" perché non è una variabile</span><span class="sxs-lookup"><span data-stu-id="8123e-103">Cannot modify the return value of 'expression' because it is not a variable</span></span>  
   
- <span data-ttu-id="4367b-104">Si è tentato di modificare un tipo di valore che viene generato come risultato di un'espressione intermedia ma non viene archiviato in una variabile.</span><span class="sxs-lookup"><span data-stu-id="4367b-104">An attempt was made to modify a value type that is produced as the result of an intermediate expression but is not stored in a variable.</span></span> <span data-ttu-id="4367b-105">Questo errore può verificarsi quando si tenta di modificare direttamente uno struct in una raccolta generica, come illustrato nell'esempio seguente:</span><span class="sxs-lookup"><span data-stu-id="4367b-105">This error can occur when you attempt to directly modify a struct in a generic collection, as shown in the following example:</span></span>  
+ <span data-ttu-id="8123e-104">Si è tentato di modificare un tipo di valore che viene generato come risultato di un'espressione intermedia ma non viene archiviato in una variabile.</span><span class="sxs-lookup"><span data-stu-id="8123e-104">An attempt was made to modify a value type that is produced as the result of an intermediate expression but is not stored in a variable.</span></span> <span data-ttu-id="8123e-105">Questo errore può verificarsi quando si tenta di modificare direttamente uno struct in una raccolta generica, come illustrato nell'esempio seguente:</span><span class="sxs-lookup"><span data-stu-id="8123e-105">This error can occur when you attempt to directly modify a struct in a generic collection, as shown in the following example:</span></span>  
   
 ```csharp  
 List<myStruct> list = {…};  
 list[0].Name = "MyStruct42"; //CS1612  
 ```  
   
- <span data-ttu-id="4367b-106">Per modificare lo struct, per prima cosa assegnarlo a una variabile locale, modificare la variabile, quindi assegnare di nuovo la variabile all'elemento nella raccolta.</span><span class="sxs-lookup"><span data-stu-id="4367b-106">To modify the struct, first assign it to a local variable, modify the variable, then assign the variable back to the item in the collection.</span></span>  
+ <span data-ttu-id="8123e-106">Per modificare lo struct, per prima cosa assegnarlo a una variabile locale, modificare la variabile, quindi assegnare di nuovo la variabile all'elemento nella raccolta.</span><span class="sxs-lookup"><span data-stu-id="8123e-106">To modify the struct, first assign it to a local variable, modify the variable, then assign the variable back to the item in the collection.</span></span>  
   
 ```csharp  
 List<myStruct> list = {…};  
@@ -32,14 +32,14 @@ ms.Name = "MyStruct42";
 list[0] = ms;  
 ```  
   
- <span data-ttu-id="4367b-107">Questo errore si verifica perché i tipi di valore vengono copiati nell'assegnazione.</span><span class="sxs-lookup"><span data-stu-id="4367b-107">This error occurs because value types are copied on assignment.</span></span> <span data-ttu-id="4367b-108">Quando si recupera un tipo di valore da una proprietà o un indicizzatore, si ottiene una copia dell'oggetto, non un riferimento all'oggetto stesso.</span><span class="sxs-lookup"><span data-stu-id="4367b-108">When you retrieve a value type from a property or indexer, you are getting a copy of the object, not a reference to the object itself.</span></span> <span data-ttu-id="4367b-109">La copia restituita non viene archiviata dalla proprietà o dall'indicizzatore poiché in realtà sono metodi, non percorsi di archiviazione (variabili).</span><span class="sxs-lookup"><span data-stu-id="4367b-109">The copy that is returned is not stored by the property or indexer because they are actually methods, not storage locations (variables).</span></span> <span data-ttu-id="4367b-110">È necessario archiviare la copia in una variabile che si dichiara prima di modificarla.</span><span class="sxs-lookup"><span data-stu-id="4367b-110">You must store the copy into a variable that you declare before you can modify it.</span></span>  
+ <span data-ttu-id="8123e-107">Questo errore si verifica perché i tipi di valore vengono copiati nell'assegnazione.</span><span class="sxs-lookup"><span data-stu-id="8123e-107">This error occurs because value types are copied on assignment.</span></span> <span data-ttu-id="8123e-108">Quando si recupera un tipo di valore da una proprietà o un indicizzatore, si ottiene una copia dell'oggetto, non un riferimento all'oggetto stesso.</span><span class="sxs-lookup"><span data-stu-id="8123e-108">When you retrieve a value type from a property or indexer, you are getting a copy of the object, not a reference to the object itself.</span></span> <span data-ttu-id="8123e-109">La copia restituita non viene archiviata dalla proprietà o dall'indicizzatore poiché in realtà sono metodi, non percorsi di archiviazione (variabili).</span><span class="sxs-lookup"><span data-stu-id="8123e-109">The copy that is returned is not stored by the property or indexer because they are actually methods, not storage locations (variables).</span></span> <span data-ttu-id="8123e-110">È necessario archiviare la copia in una variabile che si dichiara prima di modificarla.</span><span class="sxs-lookup"><span data-stu-id="8123e-110">You must store the copy into a variable that you declare before you can modify it.</span></span>  
   
- <span data-ttu-id="4367b-111">L'errore non si verifica con i tipi di riferimento poiché una proprietà o un indicizzatore in questo caso restituisce un riferimento a un oggetto esistente, ovvero un percorso di archiviazione.</span><span class="sxs-lookup"><span data-stu-id="4367b-111">The error does not occur with reference types because a property or indexer in that case returns a reference to an existing object, which is a storage location.</span></span>  
+ <span data-ttu-id="8123e-111">L'errore non si verifica con i tipi di riferimento poiché una proprietà o un indicizzatore in questo caso restituisce un riferimento a un oggetto esistente, ovvero un percorso di archiviazione.</span><span class="sxs-lookup"><span data-stu-id="8123e-111">The error does not occur with reference types because a property or indexer in that case returns a reference to an existing object, which is a storage location.</span></span>  
   
- <span data-ttu-id="4367b-112">Se si definisce la classe o lo struct, è possibile risolvere l'errore modificando la dichiarazione della proprietà per consentire l'accesso ai membri di uno struct.</span><span class="sxs-lookup"><span data-stu-id="4367b-112">If you are defining the class or struct, you can resolve this error by modifying your property declaration to provide access to the members of a struct.</span></span> <span data-ttu-id="4367b-113">Se si sta scrivendo codice client, è possibile risolvere l'errore creando una propria istanza dello struct, modificandone i campi e quindi assegnando di nuovo l'intero struct alla proprietà.</span><span class="sxs-lookup"><span data-stu-id="4367b-113">If you are writing client code, you can resolve the error by creating your own instance of the struct, modifying its fields, and then assigning the entire struct back to the property.</span></span> <span data-ttu-id="4367b-114">Come terza alternativa, è possibile modificare lo struct in una classe.</span><span class="sxs-lookup"><span data-stu-id="4367b-114">As a third alternative, you can change your struct to a class.</span></span>  
+ <span data-ttu-id="8123e-112">Se si definisce la classe o lo struct, è possibile risolvere l'errore modificando la dichiarazione della proprietà per consentire l'accesso ai membri di uno struct.</span><span class="sxs-lookup"><span data-stu-id="8123e-112">If you are defining the class or struct, you can resolve this error by modifying your property declaration to provide access to the members of a struct.</span></span> <span data-ttu-id="8123e-113">Se si sta scrivendo codice client, è possibile risolvere l'errore creando una propria istanza dello struct, modificandone i campi e quindi assegnando di nuovo l'intero struct alla proprietà.</span><span class="sxs-lookup"><span data-stu-id="8123e-113">If you are writing client code, you can resolve the error by creating your own instance of the struct, modifying its fields, and then assigning the entire struct back to the property.</span></span> <span data-ttu-id="8123e-114">Come terza alternativa, è possibile modificare lo struct in una classe.</span><span class="sxs-lookup"><span data-stu-id="8123e-114">As a third alternative, you can change your struct to a class.</span></span>  
   
-## <a name="example"></a><span data-ttu-id="4367b-115">Esempio</span><span class="sxs-lookup"><span data-stu-id="4367b-115">Example</span></span>  
- <span data-ttu-id="4367b-116">L'errore CS1612 si verifica anche quando si tenta di accedere al membro di uno struct usando una proprietà per una classe contenitore che restituisce l'intero struct, come illustrato nell'esempio seguente:</span><span class="sxs-lookup"><span data-stu-id="4367b-116">CS1612 also occurs when you attempt to access the member of a struct through a property on an enclosing class that is returning the entire struct, as shown in the following example:</span></span>  
+## <a name="example"></a><span data-ttu-id="8123e-115">Esempio</span><span class="sxs-lookup"><span data-stu-id="8123e-115">Example</span></span>  
+ <span data-ttu-id="8123e-116">L'errore CS1612 si verifica anche quando si tenta di accedere al membro di uno struct usando una proprietà per una classe contenitore che restituisce l'intero struct, come illustrato nell'esempio seguente:</span><span class="sxs-lookup"><span data-stu-id="8123e-116">CS1612 also occurs when you attempt to access the member of a struct through a property on an enclosing class that is returning the entire struct, as shown in the following example:</span></span>  
   
 ```csharp  
 // CS1612.cs  
@@ -84,8 +84,8 @@ public class MyClass
 }  
 ```  
   
-## <a name="see-also"></a><span data-ttu-id="4367b-117">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="4367b-117">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="8123e-117">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="8123e-117">See also</span></span>
 
-- [<span data-ttu-id="4367b-118">Struct</span><span class="sxs-lookup"><span data-stu-id="4367b-118">Structs</span></span>](../../programming-guide/classes-and-structs/structs.md)
-- [<span data-ttu-id="4367b-119">Tipi di valore</span><span class="sxs-lookup"><span data-stu-id="4367b-119">Value Types</span></span>](../builtin-types/value-types.md)
-- [<span data-ttu-id="4367b-120">Tipi di riferimento</span><span class="sxs-lookup"><span data-stu-id="4367b-120">Reference Types</span></span>](../keywords/reference-types.md)
+- [<span data-ttu-id="8123e-118">Tipi di struttura</span><span class="sxs-lookup"><span data-stu-id="8123e-118">Structure types</span></span>](../builtin-types/struct.md)
+- [<span data-ttu-id="8123e-119">Tipi di valore</span><span class="sxs-lookup"><span data-stu-id="8123e-119">Value types</span></span>](../builtin-types/value-types.md)
+- [<span data-ttu-id="8123e-120">Tipi riferimento</span><span class="sxs-lookup"><span data-stu-id="8123e-120">Reference types</span></span>](../keywords/reference-types.md)
