--- a/docs/csharp/language-reference/compiler-messages/cs0188.md
+++ b/docs/csharp/language-reference/compiler-messages/cs0188.md
@@ -1,31 +1,29 @@
 ---
 title: Errore del compilatore CS0188
-ms.date: 07/20/2015
+ms.date: 02/25/2020
 f1_keywords:
 - CS0188
 helpviewer_keywords:
 - CS0188
 ms.assetid: 4e693c18-584d-4c94-9863-283c69b97b0b
-ms.openlocfilehash: 6eb58be68f2ca1dd9e020cd8213a241e00b06ba8
-ms.sourcegitcommit: 986f836f72ef10876878bd6217174e41464c145a
-ms.translationtype: HT
+ms.openlocfilehash: 179ce80d8f6618e40cef0846767499a9593d38d8
+ms.sourcegitcommit: c2d9718996402993cf31541f11e95531bc68bad0
+ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/19/2019
-ms.locfileid: "69608078"
+ms.lasthandoff: 02/27/2020
+ms.locfileid: "77673068"
 ---
-# <a name="compiler-error-cs0188"></a><span data-ttu-id="9713f-102">Errore del compilatore CS0188</span><span class="sxs-lookup"><span data-stu-id="9713f-102">Compiler Error CS0188</span></span>
+# <a name="compiler-error-cs0188"></a><span data-ttu-id="f65e3-102">Errore del compilatore CS0188</span><span class="sxs-lookup"><span data-stu-id="f65e3-102">Compiler Error CS0188</span></span>
 
-<span data-ttu-id="9713f-103">Non è possibile usare l'oggetto 'this' prima dell'assegnazione di tutti i campi dell'oggetto</span><span class="sxs-lookup"><span data-stu-id="9713f-103">The 'this' object cannot be used before all of its fields are assigned to</span></span>  
+<span data-ttu-id="f65e3-103">Non è possibile usare l'oggetto 'this' prima dell'assegnazione di tutti i campi dell'oggetto</span><span class="sxs-lookup"><span data-stu-id="f65e3-103">The 'this' object cannot be used before all of its fields are assigned to</span></span>  
   
- <span data-ttu-id="9713f-104">Tutti i campi in uno `struct` devono essere assegnati da un costruttore prima che il costruttore possa chiamare un metodo in `struct`.</span><span class="sxs-lookup"><span data-stu-id="9713f-104">All fields in a `struct` have to be assigned by a constructor before the constructor can call a method in the `struct`.</span></span>  
+ <span data-ttu-id="f65e3-104">Tutti i campi in uno `struct` devono essere assegnati da un costruttore prima che il costruttore possa chiamare un metodo in `struct`.</span><span class="sxs-lookup"><span data-stu-id="f65e3-104">All fields in a `struct` have to be assigned by a constructor before the constructor can call a method in the `struct`.</span></span>  
   
- <span data-ttu-id="9713f-105">Se questo errore viene visualizzato durante il tentativo di inizializzare una proprietà in un costruttore di struct, la soluzione consiste nel modificare il parametro del costruttore per specificare il campo sottostante anziché la proprietà stessa.</span><span class="sxs-lookup"><span data-stu-id="9713f-105">If you see this error when trying to initialize a property in a struct constructor, the solution is to change the constructor parameter to specify the backing field instead of the property itself.</span></span> <span data-ttu-id="9713f-106">Le proprietà implementate automaticamente devono essere evitate negli struct perché non hanno un campo sottostante e pertanto non può essere inizializzate in alcun modo dal costruttore.</span><span class="sxs-lookup"><span data-stu-id="9713f-106">Auto-implemented properties should be avoided in structs because they have no backing field and therefore cannot be initialized in any way from the constructor.</span></span>  
-  
- <span data-ttu-id="9713f-107">Per altre informazioni, vedere [Uso di struct](../../programming-guide/classes-and-structs/using-structs.md).</span><span class="sxs-lookup"><span data-stu-id="9713f-107">For more information, see [Using Structs](../../programming-guide/classes-and-structs/using-structs.md).</span></span>  
-  
-## <a name="example"></a><span data-ttu-id="9713f-108">Esempio</span><span class="sxs-lookup"><span data-stu-id="9713f-108">Example</span></span>
+ <span data-ttu-id="f65e3-105">Se questo errore viene visualizzato quando si tenta di inizializzare una proprietà in un costruttore struct, la soluzione consiste nell'inizializzare direttamente il campo sottostante della proprietà anziché la proprietà stessa.</span><span class="sxs-lookup"><span data-stu-id="f65e3-105">If you see this error when trying to initialize a property in a struct constructor, the solution is to initialize the backing field of that property directly instead of the property itself.</span></span>
 
- <span data-ttu-id="9713f-109">L'esempio seguente genera l'errore CS0188:</span><span class="sxs-lookup"><span data-stu-id="9713f-109">The following sample generates CS0188:</span></span>  
+## <a name="example"></a><span data-ttu-id="f65e3-106">Esempio</span><span class="sxs-lookup"><span data-stu-id="f65e3-106">Example</span></span>
+
+ <span data-ttu-id="f65e3-107">L'esempio seguente genera l'errore CS0188:</span><span class="sxs-lookup"><span data-stu-id="f65e3-107">The following sample generates CS0188:</span></span>  
 
 ```csharp
 // CS0188.cs  
@@ -55,7 +53,6 @@ namespace MyNamespace
 }  
 ```
 
-## <a name="see-also"></a><span data-ttu-id="9713f-110">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="9713f-110">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="f65e3-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="f65e3-108">See also</span></span>
 
-- [<span data-ttu-id="9713f-111">Struct</span><span class="sxs-lookup"><span data-stu-id="9713f-111">Structs</span></span>](../../programming-guide/classes-and-structs/structs.md)
-- [<span data-ttu-id="9713f-112">Proprietà implementate automaticamente</span><span class="sxs-lookup"><span data-stu-id="9713f-112">Auto-Implemented Properties</span></span>](../../programming-guide/classes-and-structs/auto-implemented-properties.md)
+- [<span data-ttu-id="f65e3-109">Tipi di struttura</span><span class="sxs-lookup"><span data-stu-id="f65e3-109">Structure types</span></span>](../builtin-types/struct.md)
