--- a/docs/csharp/language-reference/compiler-messages/cs1519.md
+++ b/docs/csharp/language-reference/compiler-messages/cs1519.md
@@ -6,21 +6,21 @@ f1_keywords:
 helpviewer_keywords:
 - CS1519
 ms.assetid: 186cef8e-c6c7-49aa-8b43-f6c2cb628414
-ms.openlocfilehash: ae1e5e109541b22cc34fa86d610bed438bc6497c
-ms.sourcegitcommit: 986f836f72ef10876878bd6217174e41464c145a
-ms.translationtype: HT
+ms.openlocfilehash: 18b994702306ee878f72ca26b23b03e99a204437
+ms.sourcegitcommit: c2d9718996402993cf31541f11e95531bc68bad0
+ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/19/2019
-ms.locfileid: "69607569"
+ms.lasthandoff: 02/27/2020
+ms.locfileid: "77673238"
 ---
-# <a name="compiler-error-cs1519"></a><span data-ttu-id="6d708-102">Errore del compilatore CS1519</span><span class="sxs-lookup"><span data-stu-id="6d708-102">Compiler Error CS1519</span></span>
-<span data-ttu-id="6d708-103">Token "token" non valido nella classe, nello struct o nella dichiarazione di un membro di interfaccia</span><span class="sxs-lookup"><span data-stu-id="6d708-103">Invalid token 'token' in class, struct, or interface member declaration</span></span>  
+# <a name="compiler-error-cs1519"></a><span data-ttu-id="55984-102">Errore del compilatore CS1519</span><span class="sxs-lookup"><span data-stu-id="55984-102">Compiler Error CS1519</span></span>
+<span data-ttu-id="55984-103">Token "token" non valido nella classe, nello struct o nella dichiarazione di un membro di interfaccia</span><span class="sxs-lookup"><span data-stu-id="55984-103">Invalid token 'token' in class, struct, or interface member declaration</span></span>  
   
- <span data-ttu-id="6d708-104">Questo errore viene generato ogni volta che un token viene rilevato in una posizione in cui non deve trovarsi.</span><span class="sxs-lookup"><span data-stu-id="6d708-104">This error is generated whenever a token is encountered in a location where it does not belong.</span></span> <span data-ttu-id="6d708-105">Un *token* è una parola chiave, un identificatore (il nome di una classe, uno struct, un metodo e così via), una stringa, un carattere, un valore letterale numerico, ad esempio 108, "Hello" o "A" o un operatore o segno di punteggiatura, ad esempio `==` o `;`.</span><span class="sxs-lookup"><span data-stu-id="6d708-105">A *token* is a keyword; an identifier (the name of a class, struct, method, and so on); a string, character, or numeric literal value such as 108, "Hello", or 'A'; or an operator or punctuator such as `==` or `;`.</span></span>  
+ <span data-ttu-id="55984-104">Questo errore viene generato ogni volta che un token viene rilevato in una posizione in cui non deve trovarsi.</span><span class="sxs-lookup"><span data-stu-id="55984-104">This error is generated whenever a token is encountered in a location where it does not belong.</span></span> <span data-ttu-id="55984-105">Un *token* è una parola chiave, un identificatore (il nome di una classe, uno struct, un metodo e così via), una stringa, un carattere, un valore letterale numerico, ad esempio 108, "Hello" o "A" o un operatore o segno di punteggiatura, ad esempio `==` o `;`.</span><span class="sxs-lookup"><span data-stu-id="55984-105">A *token* is a keyword; an identifier (the name of a class, struct, method, and so on); a string, character, or numeric literal value such as 108, "Hello", or 'A'; or an operator or punctuator such as `==` or `;`.</span></span>  
   
- <span data-ttu-id="6d708-106">Se una [classe](../keywords/class.md), uno struct o una dichiarazione di membro di interfaccia contiene modificatori non validi prima del tipo, viene generato questo errore.</span><span class="sxs-lookup"><span data-stu-id="6d708-106">Any [class](../keywords/class.md), struct, or interface member declaration that contains invalid modifiers before the type will generate this error.</span></span> <span data-ttu-id="6d708-107">Per correggere l'errore, rimuovere i modificatori non validi.</span><span class="sxs-lookup"><span data-stu-id="6d708-107">To fix the error, remove the invalid modifiers.</span></span>  
+ <span data-ttu-id="55984-106">Se una [classe](../keywords/class.md), uno struct o una dichiarazione di membro di interfaccia contiene modificatori non validi prima del tipo, viene generato questo errore.</span><span class="sxs-lookup"><span data-stu-id="55984-106">Any [class](../keywords/class.md), struct, or interface member declaration that contains invalid modifiers before the type will generate this error.</span></span> <span data-ttu-id="55984-107">Per correggere l'errore, rimuovere i modificatori non validi.</span><span class="sxs-lookup"><span data-stu-id="55984-107">To fix the error, remove the invalid modifiers.</span></span>  
   
- <span data-ttu-id="6d708-108">Nell'esempio seguente viene generato l'errore CS1519 in cinque punti poiché i token vengono inseriti in posizioni in cui non sono validi:</span><span class="sxs-lookup"><span data-stu-id="6d708-108">The following sample generates CS1519 in five places because tokens are placed in locations where they are not valid:</span></span>  
+ <span data-ttu-id="55984-108">Nell'esempio seguente viene generato l'errore CS1519 in cinque punti poiché i token vengono inseriti in posizioni in cui non sono validi:</span><span class="sxs-lookup"><span data-stu-id="55984-108">The following sample generates CS1519 in five places because tokens are placed in locations where they are not valid:</span></span>  
   
 ```csharp  
 // CS1519.cs  
@@ -42,9 +42,9 @@ class Test 42
 }  
 ```  
   
-## <a name="see-also"></a><span data-ttu-id="6d708-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="6d708-109">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="55984-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="55984-109">See also</span></span>
 
-- [<span data-ttu-id="6d708-110">Classi</span><span class="sxs-lookup"><span data-stu-id="6d708-110">Classes</span></span>](../../programming-guide/classes-and-structs/classes.md)
-- [<span data-ttu-id="6d708-111">Struct</span><span class="sxs-lookup"><span data-stu-id="6d708-111">Structs</span></span>](../../programming-guide/classes-and-structs/structs.md)
-- [<span data-ttu-id="6d708-112">Interfacce</span><span class="sxs-lookup"><span data-stu-id="6d708-112">Interfaces</span></span>](../../programming-guide/interfaces/index.md)
-- [<span data-ttu-id="6d708-113">Metodi</span><span class="sxs-lookup"><span data-stu-id="6d708-113">Methods</span></span>](../../programming-guide/classes-and-structs/methods.md)
+- [<span data-ttu-id="55984-110">Classi</span><span class="sxs-lookup"><span data-stu-id="55984-110">Classes</span></span>](../../programming-guide/classes-and-structs/classes.md)
+- [<span data-ttu-id="55984-111">Tipi di struttura</span><span class="sxs-lookup"><span data-stu-id="55984-111">Structure types</span></span>](../builtin-types/struct.md)
+- [<span data-ttu-id="55984-112">Interfacce</span><span class="sxs-lookup"><span data-stu-id="55984-112">Interfaces</span></span>](../../programming-guide/interfaces/index.md)
+- [<span data-ttu-id="55984-113">Metodi</span><span class="sxs-lookup"><span data-stu-id="55984-113">Methods</span></span>](../../programming-guide/classes-and-structs/methods.md)
