--- a/docs/csharp/misc/cs0170.md
+++ b/docs/csharp/misc/cs0170.md
@@ -6,19 +6,19 @@ f1_keywords:
 helpviewer_keywords:
 - CS0170
 ms.assetid: ba881e38-2abf-4a5f-b9e6-28d26a5bd235
-ms.openlocfilehash: ded4809d0fccf4b255eb2b558dd0aa9ebe09e121
-ms.sourcegitcommit: 986f836f72ef10876878bd6217174e41464c145a
+ms.openlocfilehash: 3aad7cc348ad0b8f5cb7012548702b5c6008fa91
+ms.sourcegitcommit: c2d9718996402993cf31541f11e95531bc68bad0
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/19/2019
-ms.locfileid: "69604660"
+ms.lasthandoff: 02/27/2020
+ms.locfileid: "77672978"
 ---
-# <a name="compiler-error-cs0170"></a><span data-ttu-id="4daa4-102">Errore del compilatore CS0170</span><span class="sxs-lookup"><span data-stu-id="4daa4-102">Compiler Error CS0170</span></span>
-<span data-ttu-id="4daa4-103">Uso del campo 'field' probabilmente non assegnato</span><span class="sxs-lookup"><span data-stu-id="4daa4-103">Use of possibly unassigned field 'field'</span></span>  
+# <a name="compiler-error-cs0170"></a><span data-ttu-id="20aba-102">Errore del compilatore CS0170</span><span class="sxs-lookup"><span data-stu-id="20aba-102">Compiler Error CS0170</span></span>
+<span data-ttu-id="20aba-103">Uso del campo 'field' probabilmente non assegnato</span><span class="sxs-lookup"><span data-stu-id="20aba-103">Use of possibly unassigned field 'field'</span></span>  
   
- <span data-ttu-id="4daa4-104">Un campo in una struttura è stato usato senza essere stato prima inizializzato.</span><span class="sxs-lookup"><span data-stu-id="4daa4-104">A field in a structure was used without first being initialized.</span></span> <span data-ttu-id="4daa4-105">Per risolvere il problema, determinare prima di tutto il campo che non è stato inizializzato e quindi inizializzarlo prima di provare ad accedervi.</span><span class="sxs-lookup"><span data-stu-id="4daa4-105">To solve this problem, first determine which field was uninitialized and then initialize it before you try to access it.</span></span> <span data-ttu-id="4daa4-106">Per altre informazioni sull'inizializzazione di struct, vedere [struct](../programming-guide/classes-and-structs/structs.md) e [uso di struct](../programming-guide/classes-and-structs/using-structs.md).</span><span class="sxs-lookup"><span data-stu-id="4daa4-106">For more information about initializing structs, see [Structs](../programming-guide/classes-and-structs/structs.md) and [Using Structs](../programming-guide/classes-and-structs/using-structs.md).</span></span>  
+ <span data-ttu-id="20aba-104">Un campo in una struttura è stato usato senza essere stato prima inizializzato.</span><span class="sxs-lookup"><span data-stu-id="20aba-104">A field in a structure was used without first being initialized.</span></span> <span data-ttu-id="20aba-105">Per risolvere il problema, determinare prima di tutto il campo che non è stato inizializzato e quindi inizializzarlo prima di provare ad accedervi.</span><span class="sxs-lookup"><span data-stu-id="20aba-105">To solve this problem, first determine which field was uninitialized and then initialize it before you try to access it.</span></span> <span data-ttu-id="20aba-106">Per ulteriori informazioni sull'inizializzazione di struct, vedere [tipi di struttura](../language-reference/builtin-types/struct.md).</span><span class="sxs-lookup"><span data-stu-id="20aba-106">For more information about initializing structs, see [Structure types](../language-reference/builtin-types/struct.md).</span></span>
   
- <span data-ttu-id="4daa4-107">L'esempio seguente genera l'errore CS0170:</span><span class="sxs-lookup"><span data-stu-id="4daa4-107">The following sample generates CS0170:</span></span>  
+ <span data-ttu-id="20aba-107">L'esempio seguente genera l'errore CS0170:</span><span class="sxs-lookup"><span data-stu-id="20aba-107">The following sample generates CS0170:</span></span>  
   
 ```csharp  
 // CS0170.cs  
