--- a/docs/csharp/misc/cs1654.md
+++ b/docs/csharp/misc/cs1654.md
@@ -6,22 +6,22 @@ f1_keywords:
 helpviewer_keywords:
 - CS1654
 ms.assetid: 471c1298-1908-449d-b765-8dc3cd81a11d
-ms.openlocfilehash: b85e539c2233b0b145cc797725d1879383c53afe
-ms.sourcegitcommit: de17a7a0a37042f0d4406f5ae5393531caeb25ba
+ms.openlocfilehash: 8e1b830eb746cb0282f125bfccd0efeb0fce38bf
+ms.sourcegitcommit: c2d9718996402993cf31541f11e95531bc68bad0
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 01/24/2020
-ms.locfileid: "76741938"
+ms.lasthandoff: 02/27/2020
+ms.locfileid: "77673251"
 ---
-# <a name="compiler-error-cs1654"></a><span data-ttu-id="7a4a7-102">Errore del compilatore CS1654</span><span class="sxs-lookup"><span data-stu-id="7a4a7-102">Compiler Error CS1654</span></span>
-<span data-ttu-id="7a4a7-103">'variable' è una variabile 'read-only variable type'. Impossibile modificarne i membri</span><span class="sxs-lookup"><span data-stu-id="7a4a7-103">Cannot modify members of 'variable' because it is a 'read-only variable type'</span></span>  
+# <a name="compiler-error-cs1654"></a><span data-ttu-id="db754-102">Errore del compilatore CS1654</span><span class="sxs-lookup"><span data-stu-id="db754-102">Compiler Error CS1654</span></span>
+<span data-ttu-id="db754-103">'variable' è una variabile 'read-only variable type'. Impossibile modificarne i membri</span><span class="sxs-lookup"><span data-stu-id="db754-103">Cannot modify members of 'variable' because it is a 'read-only variable type'</span></span>  
   
- <span data-ttu-id="7a4a7-104">Questo errore si verifica quando si prova a modificare i membri di una variabile di sola lettura perché inclusa in un costrutto speciale.</span><span class="sxs-lookup"><span data-stu-id="7a4a7-104">This error occurs when you try to modify members of a variable which is read-only because it is in a special construct.</span></span>  
+ <span data-ttu-id="db754-104">Questo errore si verifica quando si prova a modificare i membri di una variabile di sola lettura perché inclusa in un costrutto speciale.</span><span class="sxs-lookup"><span data-stu-id="db754-104">This error occurs when you try to modify members of a variable which is read-only because it is in a special construct.</span></span>  
   
- <span data-ttu-id="7a4a7-105">Un'area comune in cui ciò si verifica è all'interno dei cicli [foreach](../language-reference/keywords/foreach-in.md) .</span><span class="sxs-lookup"><span data-stu-id="7a4a7-105">One common area that this occurs is within [foreach](../language-reference/keywords/foreach-in.md) loops.</span></span> <span data-ttu-id="7a4a7-106">È un errore in fase di compilazione per modificare il valore degli elementi della raccolta.</span><span class="sxs-lookup"><span data-stu-id="7a4a7-106">It is a compile-time error to modify the value of the collection elements.</span></span> <span data-ttu-id="7a4a7-107">Di conseguenza è possibile apportare modifiche agli elementi che sono [tipi valore](../language-reference/builtin-types/value-types.md), tra cui [struct](../programming-guide/classes-and-structs/structs.md).</span><span class="sxs-lookup"><span data-stu-id="7a4a7-107">Therefore, you cannot make any modifications to elements that are [value types](../language-reference/builtin-types/value-types.md), including [structs](../programming-guide/classes-and-structs/structs.md).</span></span> <span data-ttu-id="7a4a7-108">In una raccolta i cui elementi sono [tipi riferimento](../language-reference/keywords/reference-types.md), è possibile modificare i membri accessibili di ogni elemento, ma qualsiasi tentativo di aggiungere o rimuovere o sostituire elementi completi genererà [Compiler Error CS1656](../language-reference/compiler-messages/cs1656.md).</span><span class="sxs-lookup"><span data-stu-id="7a4a7-108">In a collection whose elements are [reference types](../language-reference/keywords/reference-types.md), you can modify accessible members of each element, but any try to add or remove or replace complete elements will generate [Compiler Error CS1656](../language-reference/compiler-messages/cs1656.md).</span></span>  
+ <span data-ttu-id="db754-105">Un'area comune in cui ciò si verifica è all'interno dei cicli [foreach](../language-reference/keywords/foreach-in.md) .</span><span class="sxs-lookup"><span data-stu-id="db754-105">One common area that this occurs is within [foreach](../language-reference/keywords/foreach-in.md) loops.</span></span> <span data-ttu-id="db754-106">È un errore in fase di compilazione per modificare il valore degli elementi della raccolta.</span><span class="sxs-lookup"><span data-stu-id="db754-106">It is a compile-time error to modify the value of the collection elements.</span></span> <span data-ttu-id="db754-107">Di conseguenza è possibile apportare modifiche agli elementi che sono [tipi valore](../language-reference/builtin-types/value-types.md), tra cui [struct](../language-reference/builtin-types/struct.md).</span><span class="sxs-lookup"><span data-stu-id="db754-107">Therefore, you cannot make any modifications to elements that are [value types](../language-reference/builtin-types/value-types.md), including [structs](../language-reference/builtin-types/struct.md).</span></span> <span data-ttu-id="db754-108">In una raccolta i cui elementi sono [tipi riferimento](../language-reference/keywords/reference-types.md), è possibile modificare i membri accessibili di ogni elemento, ma qualsiasi tentativo di aggiungere o rimuovere o sostituire elementi completi genererà [Compiler Error CS1656](../language-reference/compiler-messages/cs1656.md).</span><span class="sxs-lookup"><span data-stu-id="db754-108">In a collection whose elements are [reference types](../language-reference/keywords/reference-types.md), you can modify accessible members of each element, but any try to add or remove or replace complete elements will generate [Compiler Error CS1656](../language-reference/compiler-messages/cs1656.md).</span></span>  
   
-## <a name="example"></a><span data-ttu-id="7a4a7-109">Esempio</span><span class="sxs-lookup"><span data-stu-id="7a4a7-109">Example</span></span>  
- <span data-ttu-id="7a4a7-110">L'esempio seguente genera l'errore CS1654 perché `Book` è uno `struct`.</span><span class="sxs-lookup"><span data-stu-id="7a4a7-110">The following example generates error CS1654 because `Book` is a `struct`.</span></span> <span data-ttu-id="7a4a7-111">Per correggere l'errore, modificare lo `struct` in una [classe](../language-reference/keywords/class.md).</span><span class="sxs-lookup"><span data-stu-id="7a4a7-111">To fix the error, change the `struct` to a [class](../language-reference/keywords/class.md).</span></span>  
+## <a name="example"></a><span data-ttu-id="db754-109">Esempio</span><span class="sxs-lookup"><span data-stu-id="db754-109">Example</span></span>  
+ <span data-ttu-id="db754-110">L'esempio seguente genera l'errore CS1654 perché `Book` è uno `struct`.</span><span class="sxs-lookup"><span data-stu-id="db754-110">The following example generates error CS1654 because `Book` is a `struct`.</span></span> <span data-ttu-id="db754-111">Per correggere l'errore, modificare lo `struct` in una [classe](../language-reference/keywords/class.md).</span><span class="sxs-lookup"><span data-stu-id="db754-111">To fix the error, change the `struct` to a [class](../language-reference/keywords/class.md).</span></span>  
   
 ```csharp  
 using System.Collections.Generic;  
