commit translated contents

--- a/docs/core/compatibility/3.1-5.0.md
+++ b/docs/core/compatibility/3.1-5.0.md
@@ -1,13 +1,13 @@
 ---
 title: Modifiche di rilievo, dalla versione da 3.1 alla versione 5.0
 description: Elenca le modifiche di rilievo dalla versione 3.1 alla versione 5.0 di .NET, ASP.NET Core ed EF Core.
-ms.date: 03/25/2020
-ms.openlocfilehash: d608a4f33bfb54574631ceae929d59190a08f3a6
-ms.sourcegitcommit: e48a54ebe62e874500a7043f6ee0b77a744d55b4
+ms.date: 03/26/2020
+ms.openlocfilehash: 669ebf3c1fb7c646ef204d9bd15f36ed7899189f
+ms.sourcegitcommit: 59e36e65ac81cdd094a5a84617625b2a0ff3506e
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 03/26/2020
-ms.locfileid: "80291640"
+ms.lasthandoff: 03/27/2020
+ms.locfileid: "80345220"
 ---
 # <a name="breaking-changes-for-migration-from-version-31-to-50"></a>Modifiche di rilievo per la migrazione dalla versione 3.1 alla 5.0
 
@@ -16,9 +16,14 @@ Se si esegue la migrazione dalla versione 3.1 di .NET Core, ASP.NET Core o EF Co
 ## <a name="aspnet-core"></a>ASP.NET Core
 
 - [Azure: rimossi i pacchetti di integrazione di Azure con prefisso MicrosoftAzure: Microsoft-prefixed Azure integration packages removed](#azure-microsoft-prefixed-azure-integration-packages-removed)
+- [SignalR: protocollo Hub MessagePack spostato nel pacchetto MessagePack 2.x](#signalr-messagepack-hub-protocol-moved-to-messagepack-2x-package)
 - [SignalR: metodi UseSignalR e UseConnections rimossi](#signalr-usesignalr-and-useconnections-methods-removed)
 
 [!INCLUDE[Azure: Microsoft-prefixed Azure integration packages removed](~/includes/core-changes/aspnetcore/5.0/azure-integration-packages-removed.md)]
+
+***
+
+[!INCLUDE[SignalR: MessagePack Hub Protocol moved to MessagePack 2.x package](~/includes/core-changes/aspnetcore/5.0/signalr-messagepack-package.md)]
 
 ***
 
