--- a/docs/core/compatibility/3.1-5.0.md
+++ b/docs/core/compatibility/3.1-5.0.md
@@ -1,24 +1,29 @@
 ---
 title: Modifiche di rilievo, dalla versione da 3.1 alla versione 5.0
 description: Elenca le modifiche di rilievo dalla versione 3.1 alla versione 5.0 di .NET, ASP.NET Core ed EF Core.
-ms.date: 03/25/2020
-ms.openlocfilehash: d608a4f33bfb54574631ceae929d59190a08f3a6
-ms.sourcegitcommit: e48a54ebe62e874500a7043f6ee0b77a744d55b4
+ms.date: 03/26/2020
+ms.openlocfilehash: 669ebf3c1fb7c646ef204d9bd15f36ed7899189f
+ms.sourcegitcommit: 59e36e65ac81cdd094a5a84617625b2a0ff3506e
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 03/26/2020
-ms.locfileid: "80291640"
+ms.lasthandoff: 03/27/2020
+ms.locfileid: "80345220"
 ---
-# <a name="breaking-changes-for-migration-from-version-31-to-50"></a><span data-ttu-id="c87ec-103">Modifiche di rilievo per la migrazione dalla versione 3.1 alla 5.0</span><span class="sxs-lookup"><span data-stu-id="c87ec-103">Breaking changes for migration from version 3.1 to 5.0</span></span>
+# <a name="breaking-changes-for-migration-from-version-31-to-50"></a><span data-ttu-id="a4f9c-103">Modifiche di rilievo per la migrazione dalla versione 3.1 alla 5.0</span><span class="sxs-lookup"><span data-stu-id="a4f9c-103">Breaking changes for migration from version 3.1 to 5.0</span></span>
 
-<span data-ttu-id="c87ec-104">Se si esegue la migrazione dalla versione 3.1 di .NET Core, ASP.NET Core o EF Core alla versione 5.0 di .NET, ASP.NET Core o EF Core, le modifiche di rilievo elencate in questo articolo potrebbero influire sull'app.</span><span class="sxs-lookup"><span data-stu-id="c87ec-104">If you're migrating from version 3.1 of .NET Core, ASP.NET Core, or EF Core to version 5.0 of .NET, ASP.NET Core, or EF Core, the breaking changes listed in this article may affect your app.</span></span>
+<span data-ttu-id="a4f9c-104">Se si esegue la migrazione dalla versione 3.1 di .NET Core, ASP.NET Core o EF Core alla versione 5.0 di .NET, ASP.NET Core o EF Core, le modifiche di rilievo elencate in questo articolo potrebbero influire sull'app.</span><span class="sxs-lookup"><span data-stu-id="a4f9c-104">If you're migrating from version 3.1 of .NET Core, ASP.NET Core, or EF Core to version 5.0 of .NET, ASP.NET Core, or EF Core, the breaking changes listed in this article may affect your app.</span></span>
 
-## <a name="aspnet-core"></a><span data-ttu-id="c87ec-105">ASP.NET Core</span><span class="sxs-lookup"><span data-stu-id="c87ec-105">ASP.NET Core</span></span>
+## <a name="aspnet-core"></a><span data-ttu-id="a4f9c-105">ASP.NET Core</span><span class="sxs-lookup"><span data-stu-id="a4f9c-105">ASP.NET Core</span></span>
 
-- [<span data-ttu-id="c87ec-106">Azure: rimossi i pacchetti di integrazione di Azure con prefisso MicrosoftAzure: Microsoft-prefixed Azure integration packages removed</span><span class="sxs-lookup"><span data-stu-id="c87ec-106">Azure: Microsoft-prefixed Azure integration packages removed</span></span>](#azure-microsoft-prefixed-azure-integration-packages-removed)
-- [<span data-ttu-id="c87ec-107">SignalR: metodi UseSignalR e UseConnections rimossi</span><span class="sxs-lookup"><span data-stu-id="c87ec-107">SignalR: UseSignalR and UseConnections methods removed</span></span>](#signalr-usesignalr-and-useconnections-methods-removed)
+- [<span data-ttu-id="a4f9c-106">Azure: rimossi i pacchetti di integrazione di Azure con prefisso MicrosoftAzure: Microsoft-prefixed Azure integration packages removed</span><span class="sxs-lookup"><span data-stu-id="a4f9c-106">Azure: Microsoft-prefixed Azure integration packages removed</span></span>](#azure-microsoft-prefixed-azure-integration-packages-removed)
+- [<span data-ttu-id="a4f9c-107">SignalR: protocollo Hub MessagePack spostato nel pacchetto MessagePack 2.x</span><span class="sxs-lookup"><span data-stu-id="a4f9c-107">SignalR: MessagePack Hub Protocol moved to MessagePack 2.x package</span></span>](#signalr-messagepack-hub-protocol-moved-to-messagepack-2x-package)
+- [<span data-ttu-id="a4f9c-108">SignalR: metodi UseSignalR e UseConnections rimossi</span><span class="sxs-lookup"><span data-stu-id="a4f9c-108">SignalR: UseSignalR and UseConnections methods removed</span></span>](#signalr-usesignalr-and-useconnections-methods-removed)
 
 [!INCLUDE[Azure: Microsoft-prefixed Azure integration packages removed](~/includes/core-changes/aspnetcore/5.0/azure-integration-packages-removed.md)]
+
+***
+
+[!INCLUDE[SignalR: MessagePack Hub Protocol moved to MessagePack 2.x package](~/includes/core-changes/aspnetcore/5.0/signalr-messagepack-package.md)]
 
 ***
 
