--- a/docs/core/compatibility/3.1-5.0.md
+++ b/docs/core/compatibility/3.1-5.0.md
@@ -1,13 +1,13 @@
 ---
 title: Modifiche di rilievo, dalla versione da 3.1 alla versione 5.0
 description: Elenca le modifiche di rilievo dalla versione 3.1 alla versione 5.0 di .NET, ASP.NET Core ed EF Core.
-ms.date: 03/26/2020
-ms.openlocfilehash: 669ebf3c1fb7c646ef204d9bd15f36ed7899189f
-ms.sourcegitcommit: 59e36e65ac81cdd094a5a84617625b2a0ff3506e
+ms.date: 03/27/2020
+ms.openlocfilehash: d0bc59c01f2cb849d4c429dcf37c98c5d180ea20
+ms.sourcegitcommit: a9b8945630426a575ab0a332e568edc807666d1b
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 03/27/2020
-ms.locfileid: "80345220"
+ms.lasthandoff: 03/30/2020
+ms.locfileid: "80391195"
 ---
 # <a name="breaking-changes-for-migration-from-version-31-to-50"></a>Modifiche di rilievo per la migrazione dalla versione 3.1 alla 5.0
 
@@ -18,6 +18,7 @@ Se si esegue la migrazione dalla versione 3.1 di .NET Core, ASP.NET Core o EF Co
 - [Azure: rimossi i pacchetti di integrazione di Azure con prefisso MicrosoftAzure: Microsoft-prefixed Azure integration packages removed](#azure-microsoft-prefixed-azure-integration-packages-removed)
 - [SignalR: protocollo Hub MessagePack spostato nel pacchetto MessagePack 2.x](#signalr-messagepack-hub-protocol-moved-to-messagepack-2x-package)
 - [SignalR: metodi UseSignalR e UseConnections rimossi](#signalr-usesignalr-and-useconnections-methods-removed)
+- [File statici: il tipo di contenuto CSV modificato in standard-compliant](#static-files-csv-content-type-changed-to-standards-compliant)
 
 [!INCLUDE[Azure: Microsoft-prefixed Azure integration packages removed](~/includes/core-changes/aspnetcore/5.0/azure-integration-packages-removed.md)]
 
@@ -28,5 +29,9 @@ Se si esegue la migrazione dalla versione 3.1 di .NET Core, ASP.NET Core o EF Co
 ***
 
 [!INCLUDE[SignalR: UseSignalR and UseConnections methods removed](~/includes/core-changes/aspnetcore/5.0/signalr-usesignalr-useconnections-removed.md)]
+
+***
+
+[!INCLUDE[Static files: CSV content type changed to standards-compliant](~/includes/core-changes/aspnetcore/5.0/static-files-csv-content-type-changed.md)]
 
 ***
