commit translated contents

--- a/docs/csharp/misc/cs1718.md
+++ b/docs/csharp/misc/cs1718.md
@@ -6,19 +6,19 @@ f1_keywords:
 helpviewer_keywords:
 - CS1718
 ms.assetid: 7c1c11fd-4f91-482d-b8f7-efe2a361634e
-ms.openlocfilehash: 7f6f97556e79649f6e844c3d41afbbd60d873bf5
-ms.sourcegitcommit: 99b153b93bf94d0fecf7c7bcecb58ac424dfa47c
+ms.openlocfilehash: debbe75d3464a0b2e08ae088f6ce25648c9f29be
+ms.sourcegitcommit: f87ad41b8e62622da126aa928f7640108c4eff98
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 03/25/2020
-ms.locfileid: "80249266"
+ms.lasthandoff: 04/07/2020
+ms.locfileid: "80805882"
 ---
 # <a name="compiler-warning-level-3-cs1718"></a>Avviso del compilatore (livello 3) CS1718
 Confronto effettuato con la stessa variabile. Si intendeva confrontare qualcos'altro?  
   
- Per eseguire il confronto con un altro elemento, correggere l'istruzione.  
+ Se si intende confrontare con qualcos'altro, quindi correggere l'istruzione.  
   
- Nel caso fosse necessario verificare la restituzione del valore true o false usare istruzioni come `if (a == a) (true)` o `if (a < a) (false)`. In questo caso, è preferibile scrivere `if (true)` o `if (false)`. per due motivi:  
+ Nel caso fosse necessario verificare la restituzione del valore true o false usare istruzioni come `if (a == a) (true)` o `if (a < a) (false)`. È meglio usare `if (true)` `if (false)`o , per i due motivi seguenti:  
   
 - È più semplice e conciso.  
   
