commit bilingual contents

--- a/docs/csharp/language-reference/compiler-messages/cs0579.md
+++ b/docs/csharp/language-reference/compiler-messages/cs0579.md
@@ -6,20 +6,20 @@ f1_keywords:
 helpviewer_keywords:
 - CS0579
 ms.assetid: 1a15af7e-60ad-4418-a493-15fdfe08e7db
-ms.openlocfilehash: eed622229768c352ca265881c1a82723aeb09e5c
-ms.sourcegitcommit: 7588136e355e10cbc2582f389c90c127363c02a5
+ms.openlocfilehash: 2f9df127f1e66c33f071a8acd126ce38d33d013d
+ms.sourcegitcommit: c91110ef6ee3fedb591f3d628dc17739c4a7071e
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 03/14/2020
-ms.locfileid: "69603659"
+ms.lasthandoff: 04/15/2020
+ms.locfileid: "81389071"
 ---
-# <a name="compiler-error-cs0579"></a><span data-ttu-id="e37b8-102">Errore del compilatore CS0579</span><span class="sxs-lookup"><span data-stu-id="e37b8-102">Compiler Error CS0579</span></span>
-<span data-ttu-id="e37b8-103">Attributo "attribute" duplicato</span><span class="sxs-lookup"><span data-stu-id="e37b8-103">Duplicate 'attribute' attribute</span></span>  
+# <a name="compiler-error-cs0579"></a><span data-ttu-id="3d680-102">Errore del compilatore CS0579</span><span class="sxs-lookup"><span data-stu-id="3d680-102">Compiler Error CS0579</span></span>
+<span data-ttu-id="3d680-103">Attributo "attribute" duplicato</span><span class="sxs-lookup"><span data-stu-id="3d680-103">Duplicate 'attribute' attribute</span></span>  
   
- <span data-ttu-id="e37b8-104">Non è possibile specificare lo stesso attributo più di una volta, a meno che l'attributo specifichi **AllowMultiple = true** in [AttributeUsage](../../programming-guide/concepts/attributes/attributeusage.md).</span><span class="sxs-lookup"><span data-stu-id="e37b8-104">It is not possible to specify the same attribute more than once unless the attribute specifies **AllowMultiple=true** in its [AttributeUsage](../../programming-guide/concepts/attributes/attributeusage.md).</span></span>  
+ <span data-ttu-id="3d680-104">Non è possibile specificare lo stesso attributo più di una volta, a meno che l'attributo specifichi **AllowMultiple = true** in [AttributeUsage](../../language-reference/attributes/general.md).</span><span class="sxs-lookup"><span data-stu-id="3d680-104">It is not possible to specify the same attribute more than once unless the attribute specifies **AllowMultiple=true** in its [AttributeUsage](../../language-reference/attributes/general.md).</span></span>  
   
-## <a name="example"></a><span data-ttu-id="e37b8-105">Esempio</span><span class="sxs-lookup"><span data-stu-id="e37b8-105">Example</span></span>  
- <span data-ttu-id="e37b8-106">L'esempio seguente genera l'errore CS0579.</span><span class="sxs-lookup"><span data-stu-id="e37b8-106">The following example generates CS0579.</span></span>  
+## <a name="example"></a><span data-ttu-id="3d680-105">Esempio</span><span class="sxs-lookup"><span data-stu-id="3d680-105">Example</span></span>  
+ <span data-ttu-id="3d680-106">L'esempio seguente genera l'errore CS0579.</span><span class="sxs-lookup"><span data-stu-id="3d680-106">The following example generates CS0579.</span></span>  
   
 ```csharp  
 // CS0579.cs  
