--- a/docs/csharp/language-reference/compiler-messages/cs0467.md
+++ b/docs/csharp/language-reference/compiler-messages/cs0467.md
@@ -6,20 +6,20 @@ f1_keywords:
 helpviewer_keywords:
 - CS0467
 ms.assetid: ae082998-afd6-4f82-9c87-6b429ba8fd57
-ms.openlocfilehash: ab54b2f3145935e64bb37dc8f35829b9698e7f1f
-ms.sourcegitcommit: 7588136e355e10cbc2582f389c90c127363c02a5
+ms.openlocfilehash: b09cce5e2d3a7164f1d7f49398dd57c5d5828d0b
+ms.sourcegitcommit: 465547886a1224a5435c3ac349c805e39ce77706
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 03/14/2020
-ms.locfileid: "79174056"
+ms.lasthandoff: 04/21/2020
+ms.locfileid: "81738886"
 ---
-# <a name="compiler-warning-level-2-cs0467"></a><span data-ttu-id="85355-102">Avviso del compilatore (livello 2) CS0467</span><span class="sxs-lookup"><span data-stu-id="85355-102">Compiler Warning (level 2) CS0467</span></span>
-<span data-ttu-id="85355-103">Ambiguità tra il metodo "method" e il non metodo "non-method".</span><span class="sxs-lookup"><span data-stu-id="85355-103">Ambiguity between method 'method' and non-method 'non-method'.</span></span> <span data-ttu-id="85355-104">Uso del gruppo di metodi.</span><span class="sxs-lookup"><span data-stu-id="85355-104">Using method group.</span></span>  
+# <a name="compiler-warning-level-2-cs0467"></a><span data-ttu-id="b2def-102">Avviso del compilatore (livello 2) CS0467</span><span class="sxs-lookup"><span data-stu-id="b2def-102">Compiler Warning (level 2) CS0467</span></span>
+<span data-ttu-id="b2def-103">Ambiguità tra il metodo "method" e il non metodo "non-method".</span><span class="sxs-lookup"><span data-stu-id="b2def-103">Ambiguity between method 'method' and non-method 'non-method'.</span></span> <span data-ttu-id="b2def-104">Uso del gruppo di metodi.</span><span class="sxs-lookup"><span data-stu-id="b2def-104">Using method group.</span></span>  
   
- <span data-ttu-id="85355-105">L'errore di ambiguità è causato dalla presenza di membri ereditati da interfacce diverse che hanno la stessa firma.</span><span class="sxs-lookup"><span data-stu-id="85355-105">Inherited members from different interfaces that have the same signature  cause an ambiguity error.</span></span>  
+ <span data-ttu-id="b2def-105">L'errore di ambiguità è causato dalla presenza di membri ereditati da interfacce diverse che hanno la stessa firma.</span><span class="sxs-lookup"><span data-stu-id="b2def-105">Inherited members from different interfaces that have the same signature  cause an ambiguity error.</span></span>  
   
-## <a name="example"></a><span data-ttu-id="85355-106">Esempio</span><span class="sxs-lookup"><span data-stu-id="85355-106">Example</span></span>  
- <span data-ttu-id="85355-107">L'esempio seguente genera l'errore CS0467.</span><span class="sxs-lookup"><span data-stu-id="85355-107">The following example generates CS0467.</span></span>  
+## <a name="example"></a><span data-ttu-id="b2def-106">Esempio</span><span class="sxs-lookup"><span data-stu-id="b2def-106">Example</span></span>  
+ <span data-ttu-id="b2def-107">L'esempio seguente genera l'errore CS0467.</span><span class="sxs-lookup"><span data-stu-id="b2def-107">The following example generates CS0467.</span></span>  
   
 ```csharp  
 // CS0467.cs  
@@ -46,7 +46,7 @@ class Driver
         // To resolve the warning, you can change the name of the method or
         // the property.  
   
-        // You also can disambiguate by specifying IList or ICounter.  
+        // You can also disambiguate by specifying IList or ICounter.  
         ((IList)x).Count = 1;  
         ((ICounter)x).Count(3);  
     }  
