commit translated contents

--- a/docs/core/compatibility/2.0-2.1.md
+++ b/docs/core/compatibility/2.0-2.1.md
@@ -2,18 +2,18 @@
 title: Modifiche di rilievo, versione da 2.0 a 2.1
 description: Elenca le modifiche di rilievo dalla versione 2.0 alla versione 2.1 di .NET Core.
 ms.date: 12/17/2019
-ms.openlocfilehash: 97930bf43c70c4d02524feb5b27ebfe3e0cdcc29
-ms.sourcegitcommit: 7588136e355e10cbc2582f389c90c127363c02a5
+ms.openlocfilehash: f150a3218761bec2a81a0d0c32d7b2ee123cbeda
+ms.sourcegitcommit: 348bb052d5cef109a61a3d5253faa5d7167d55ac
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 03/14/2020
-ms.locfileid: "79147438"
+ms.lasthandoff: 04/22/2020
+ms.locfileid: "82021468"
 ---
 # <a name="breaking-changes-for-migration-from-version-20-to-21"></a>Modifiche di rilievo per la migrazione dalla versione 2.0 alla versione 2.1Breaking changes for migration from version 2.0 to 2.1
 
 Se stai eseguendo la migrazione dalla versione 2.0 alla versione 2.1 di .NET Core, le modifiche di rilievo elencate in questo articolo potrebbero influire sull'app.
 
-## <a name="corefx"></a>CoreFx
+## <a name="core-net-libraries"></a>Librerie .NET di base
 
 - [Campi privati aggiunti ai tipi struct predefinitiPrivate fields added to built-in struct types](#private-fields-added-to-built-in-struct-types)
 - [Versioni OpenSSL su macOS](#openssl-versions-on-macos)
