--- a/docs/core/compatibility/2.2-3.0.md
+++ b/docs/core/compatibility/2.2-3.0.md
@@ -2,12 +2,12 @@
 title: Modifiche di rilievo, versione da 2.2 a 3.0
 description: Elenca le modifiche di rilievo dalla versione 2.2 alla versione 3.0 di .NET Core, ASP.NET Core ed EF Core.
 ms.date: 01/10/2020
-ms.openlocfilehash: 2c9f7a72b00824cc3bbcecf53262a9229d3e0869
-ms.sourcegitcommit: 7588136e355e10cbc2582f389c90c127363c02a5
+ms.openlocfilehash: 175b30b4c048b8363852cd6e43977fc3dbc5fc23
+ms.sourcegitcommit: 348bb052d5cef109a61a3d5253faa5d7167d55ac
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 03/14/2020
-ms.locfileid: "77451890"
+ms.lasthandoff: 04/22/2020
+ms.locfileid: "82021734"
 ---
 # <a name="breaking-changes-for-migration-from-version-22-to-30"></a>Modifiche di rilievo per la migrazione dalla versione 2.2 alla versione 3.0Breaking changes for migration from Version 2.2 to 3.0
 
@@ -266,7 +266,7 @@ Se si esegue la migrazione dalla versione 2.2 alla versione 3.0 di .NET Core, AS
 
 ***
 
-## <a name="corefx"></a>CoreFx
+## <a name="core-net-libraries"></a>Librerie .NET di base
 
 - [API che segnalano ora la versione del report e non la versione del file](#apis-that-report-version-now-report-product-and-not-file-version)
 - [Le istanze di EncoderFallbackBuffer personalizzate non possono eseguire il fallback in modo ricorsivoCustom EncoderFallbackBuffer instances cannot fallback recursively](#custom-encoderfallbackbuffer-instances-cannot-fall-back-recursively)
