--- a/docs/core/compatibility/2.2-3.1.md
+++ b/docs/core/compatibility/2.2-3.1.md
@@ -2,12 +2,12 @@
 title: Modifiche di rilievo, versione da 2.2 a 3.1
 description: Elenca le modifiche di rilievo dalla versione 2.2 alla versione 3.1 di .NET Core, ASP.NET Core ed EF Core.
 ms.date: 01/10/2020
-ms.openlocfilehash: e4d7d98e34090bfe32b9c12c07efe0125845c038
-ms.sourcegitcommit: 7588136e355e10cbc2582f389c90c127363c02a5
+ms.openlocfilehash: 97c84df29fee2fc0aa50cd73db2ccaab5511dc6e
+ms.sourcegitcommit: 348bb052d5cef109a61a3d5253faa5d7167d55ac
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 03/14/2020
-ms.locfileid: "77451954"
+ms.lasthandoff: 04/22/2020
+ms.locfileid: "82021645"
 ---
 # <a name="breaking-changes-for-migration-from-version-22-to-31"></a>Modifiche di rilievo per la migrazione dalla versione 2.2 alla versione 3.1
 
@@ -269,7 +269,7 @@ Se si esegue la migrazione dalla versione 2.2 alla versione 3.1 di .NET Core, AS
 
 [!INCLUDE[Target framework: .NET Framework not supported](~/includes/core-changes/aspnetcore/3.0/targetfx-netfx-tfm-support.md)]
 
-## <a name="corefx"></a>CoreFx
+## <a name="core-net-libraries"></a>Librerie .NET di base
 
 - [API che segnalano ora la versione del report e non la versione del file](#apis-that-report-version-now-report-product-and-not-file-version)
 - [Le istanze di EncoderFallbackBuffer personalizzate non possono eseguire il fallback in modo ricorsivoCustom EncoderFallbackBuffer instances cannot fallback recursively](#custom-encoderfallbackbuffer-instances-cannot-fall-back-recursively)
