commit translated contents

--- a/docs/csharp/misc/cs0243.md
+++ b/docs/csharp/misc/cs0243.md
@@ -6,22 +6,22 @@ f1_keywords:
 helpviewer_keywords:
 - CS0243
 ms.assetid: 2506e4cb-dc26-46b4-a58c-ab6bf1601144
-ms.openlocfilehash: da68259ca1531a79f3692da2b29c807cd9598d1a
-ms.sourcegitcommit: 986f836f72ef10876878bd6217174e41464c145a
+ms.openlocfilehash: 9eb4ad849c1450238a8127e3753bc7423ef85ebc
+ms.sourcegitcommit: 62285ec11fa8e8424bab00511a90760c60e63c95
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/19/2019
-ms.locfileid: "69600019"
+ms.lasthandoff: 04/20/2020
+ms.locfileid: "81645508"
 ---
 # <a name="compiler-error-cs0243"></a>Errore del compilatore CS0243
 
 L'attributo Conditional non è valido per 'method' perché è un metodo di override  
   
- L'attributo [Conditional](../programming-guide/concepts/attributes/common-attributes.md#Conditional) non è consentito in un metodo contrassegnato con la parola chiave [override](../language-reference/keywords/override.md) . Per ulteriori informazioni, vedere [sapere quando utilizzare le parole chiave override e New](../programming-guide/classes-and-structs/knowing-when-to-use-override-and-new-keywords.md).  
+L'attributo <xref:System.Diagnostics.ConditionalAttribute> non è consentito in un metodo contrassegnato con la parola chiave [override.](../language-reference/keywords/override.md) Per ulteriori informazioni, vedere [Sapere quando utilizzare le parole chiave Override e New](../programming-guide/classes-and-structs/knowing-when-to-use-override-and-new-keywords.md).  
   
- Il compilatore non esegue mai l'associazione ai metodi di override; esegue solo l'associazione al metodo di base e Common Language Runtime chiama l'override, come appropriato.  
+Il compilatore non esegue mai l'associazione ai metodi di override. Viene associato solo al metodo di base e Common Language Runtime chiama l'override, in base alle esigenze.  
   
- L'esempio seguente genera l'errore CS0243:  
+Il codice seguente genera l'errore CS0243:  
 
 ```csharp
 // CS0243.cs  
