--- a/docs/csharp/misc/cs0629.md
+++ b/docs/csharp/misc/cs0629.md
@@ -6,19 +6,20 @@ f1_keywords:
 helpviewer_keywords:
 - CS0629
 ms.assetid: 20f22ef0-3c6f-4108-ab09-3f0752375a10
-ms.openlocfilehash: 2c3a3c4811642d05a3207c168df49a722b425bd2
-ms.sourcegitcommit: 986f836f72ef10876878bd6217174e41464c145a
+ms.openlocfilehash: c3858c9ca7d418d30f1cf0f9e2a4bdfd54605997
+ms.sourcegitcommit: 62285ec11fa8e8424bab00511a90760c60e63c95
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/19/2019
-ms.locfileid: "69610325"
+ms.lasthandoff: 04/20/2020
+ms.locfileid: "81644320"
 ---
 # <a name="compiler-error-cs0629"></a>Errore del compilatore CS0629
+
 Il membro condizionale 'member' non può implementare il membro di interfaccia 'base class member' nel tipo 'Type Name'  
   
- L'attributo [Conditional](../programming-guide/concepts/attributes/common-attributes.md#Conditional) non può essere usato nell'implementazione di un'interfaccia.  
+[L'attributo Conditional](../language-reference/attributes/general.md#conditional-attribute) non può essere utilizzato nell'implementazione di un'interfaccia.  
   
- L'esempio seguente genera l'errore CS0629:  
+L'esempio seguente genera l'errore CS0629:  
   
 ```csharp  
 // CS0629.cs  
