--- a/docs/csharp/language-reference/compiler-messages/cs0618.md
+++ b/docs/csharp/language-reference/compiler-messages/cs0618.md
@@ -6,17 +6,17 @@ f1_keywords:
 helpviewer_keywords:
 - CS0618
 ms.assetid: b6edf0a9-b186-4ed8-9e16-978659b89205
-ms.openlocfilehash: d3c2fe7e0f82277ce69ff4bd1db796861f820b78
-ms.sourcegitcommit: 7588136e355e10cbc2582f389c90c127363c02a5
+ms.openlocfilehash: 86ed7b3d885aebf046f3d29a663f446c1fbcf11b
+ms.sourcegitcommit: 62285ec11fa8e8424bab00511a90760c60e63c95
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 03/14/2020
-ms.locfileid: "61671197"
+ms.lasthandoff: 04/20/2020
+ms.locfileid: "81644346"
 ---
 # <a name="compiler-warning-level-2-cs0618"></a>Avviso del compilatore (livello 2) CS0618
 'member' è obsoleto: 'text'  
   
- Un membro di classe è contrassegnato con l'attributo `Obsolete`. Quando si fa riferimento a tale membro di classe viene generato un avviso. Per altre informazioni, vedere [Attributi comuni](../../programming-guide/concepts/attributes/common-attributes.md).  
+ Un membro di classe è contrassegnato con l'attributo `Obsolete`. Quando si fa riferimento a tale membro di classe viene generato un avviso. Per altre informazioni, vedere [Attributi comuni](../attributes/global.md).  
   
  L'esempio seguente genera l'errore CS0618:  
   
