commit translated contents

--- a/docs/core/compatibility/2.2-3.0.md
+++ b/docs/core/compatibility/2.2-3.0.md
@@ -2,12 +2,12 @@
 title: Modifiche di rilievo, dalla versione 2,2 alla 3,0
 description: Elenca le modifiche di rilievo dalla versione 2,2 alla versione 3,0 di .NET Core, ASP.NET Core e EF Core.
 ms.date: 01/10/2020
-ms.openlocfilehash: d8e34de05d6e2b8f82559939ac8308b019e3fe1c
-ms.sourcegitcommit: 8b02d42f93adda304246a47f49f6449fc74a3af4
+ms.openlocfilehash: 13c539c6426c4781b4a3da03a69921e8275a507e
+ms.sourcegitcommit: c2c1269a81ffdcfc8675bcd9a8505b1a11ffb271
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/24/2020
-ms.locfileid: "82135848"
+ms.lasthandoff: 04/25/2020
+ms.locfileid: "82158515"
 ---
 # <a name="breaking-changes-for-migration-from-version-22-to-30"></a>Modifiche di rilievo per la migrazione dalla versione 2,2 alla 3,0
 
@@ -273,7 +273,7 @@ Se si esegue la migrazione dalla versione 2,2 alla versione 3,0 di .NET Core, AS
 - [Modifiche al comportamento di analisi e formattazione a virgola mobile](#floating-point-formatting-and-parsing-behavior-changed)
 - [Le operazioni di analisi a virgola mobile non hanno più esito negativo o generano OverflowException](#floating-point-parsing-operations-no-longer-fail-or-throw-an-overflowexception)
 - [InvalidAsynchronousStateException spostato in un altro assembly](#invalidasynchronousstateexception-moved-to-another-assembly)
-- [NET Core 3,0 segue le procedure consigliate Unicode per la sostituzione di sequenze di byte UTF-8 in formato non valido](#net-core-30-follows-unicode-best-practices-when-replacing-ill-formed-utf-8-byte-sequences)
+- [La sostituzione di sequenze di byte UTF-8 in formato non corretto segue le linee guida Unicode](#replacing-ill-formed-utf-8-byte-sequences-follows-unicode-guidelines)
 - [TypeDescriptionProviderAttribute spostato in un altro assembly](#typedescriptionproviderattribute-moved-to-another-assembly)
 - [Tipo di eccezione del serializzatore JSON modificato da Jsonexception a NotSupportedException](#json-serializer-exception-type-changed-from-jsonexception-to-notsupportedexception)
 - [Modifica della semantica di (String) null in Utf8JsonWriter](#change-in-semantics-of-stringnull-in-utf8jsonwriter)
