--- a/docs/core/compatibility/2.2-3.1.md
+++ b/docs/core/compatibility/2.2-3.1.md
@@ -2,12 +2,12 @@
 title: Modifiche di rilievo, dalla versione 2,2 alla 3,1
 description: Elenca le modifiche di rilievo dalla versione 2,2 alla versione 3,1 di .NET Core, ASP.NET Core e EF Core.
 ms.date: 01/10/2020
-ms.openlocfilehash: d0fa625987b3e86d33921bc68b348d5e2c6276be
-ms.sourcegitcommit: 8b02d42f93adda304246a47f49f6449fc74a3af4
+ms.openlocfilehash: 316aa2dd203158bc8d1fbd02a9dd96ceea5d3dea
+ms.sourcegitcommit: c2c1269a81ffdcfc8675bcd9a8505b1a11ffb271
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/24/2020
-ms.locfileid: "82135893"
+ms.lasthandoff: 04/25/2020
+ms.locfileid: "82158528"
 ---
 # <a name="breaking-changes-for-migration-from-version-22-to-31"></a>Modifiche di rilievo per la migrazione dalla versione 2,2 alla 3,1
 
@@ -276,7 +276,7 @@ Se si esegue la migrazione dalla versione 2,2 alla versione 3,1 di .NET Core, AS
 - [Modifiche al comportamento di analisi e formattazione a virgola mobile](#floating-point-formatting-and-parsing-behavior-changed)
 - [Le operazioni di analisi a virgola mobile non hanno più esito negativo o generano OverflowException](#floating-point-parsing-operations-no-longer-fail-or-throw-an-overflowexception)
 - [InvalidAsynchronousStateException spostato in un altro assembly](#invalidasynchronousstateexception-moved-to-another-assembly)
-- [NET Core 3,0 segue le procedure consigliate Unicode per la sostituzione di sequenze di byte UTF-8 in formato non valido](#net-core-30-follows-unicode-best-practices-when-replacing-ill-formed-utf-8-byte-sequences)
+- [La sostituzione di sequenze di byte UTF-8 in formato non corretto segue le linee guida Unicode](#replacing-ill-formed-utf-8-byte-sequences-follows-unicode-guidelines)
 - [TypeDescriptionProviderAttribute spostato in un altro assembly](#typedescriptionproviderattribute-moved-to-another-assembly)
 - [Tipo di eccezione del serializzatore JSON modificato da Jsonexception a NotSupportedException](#json-serializer-exception-type-changed-from-jsonexception-to-notsupportedexception)
 - [Modifica della semantica di (String) null in Utf8JsonWriter](#change-in-semantics-of-stringnull-in-utf8jsonwriter)
