--- a/docs/core/compatibility/3.1-5.0.md
+++ b/docs/core/compatibility/3.1-5.0.md
@@ -1,24 +1,24 @@
 ---
-title: Modifiche di rilievo, dalla versione da 3.1 alla versione 5.0
-description: Elenca le modifiche di rilievo dalla versione 3.1 alla versione 5.0 di .NET, ASP.NET Core ed EF Core.
+title: Modifiche di rilievo, dalla versione 3,1 alla 5,0
+description: Elenca le modifiche di rilievo dalla versione 3,1 alla versione 5,0 di .NET, ASP.NET Core e EF Core.
 ms.date: 04/07/2020
-ms.openlocfilehash: b7ce83276bc4e4f0de1eff08a0dc10fa2588d1dd
-ms.sourcegitcommit: 2b3b2d684259463ddfc76ad680e5e09fdc1984d2
+ms.openlocfilehash: 2a0af0496552cc276d574bafb1e9d3b8cb5197a9
+ms.sourcegitcommit: c2c1269a81ffdcfc8675bcd9a8505b1a11ffb271
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/08/2020
-ms.locfileid: "80888189"
+ms.lasthandoff: 04/25/2020
+ms.locfileid: "82158399"
 ---
-# <a name="breaking-changes-for-migration-from-version-31-to-50"></a>Modifiche di rilievo per la migrazione dalla versione 3.1 alla 5.0
+# <a name="breaking-changes-for-migration-from-version-31-to-50"></a>Modifiche di rilievo per la migrazione dalla versione 3,1 alla 5,0
 
-Se si esegue la migrazione dalla versione 3.1 di .NET Core, ASP.NET Core o EF Core alla versione 5.0 di .NET, ASP.NET Core o EF Core, le modifiche di rilievo elencate in questo articolo potrebbero influire sull'app.
+Se si esegue la migrazione dalla versione 3,1 di .NET Core, ASP.NET Core o EF Core alla versione 5,0 di .NET, ASP.NET Core o EF Core, le modifiche di rilievo elencate in questo articolo potrebbero influire sull'app.
 
 ## <a name="aspnet-core"></a>ASP.NET Core
 
-- [Azure: rimossi i pacchetti di integrazione di Azure con prefisso MicrosoftAzure: Microsoft-prefixed Azure integration packages removed](#azure-microsoft-prefixed-azure-integration-packages-removed)
-- [SignalR: protocollo Hub MessagePack spostato nel pacchetto MessagePack 2.x](#signalr-messagepack-hub-protocol-moved-to-messagepack-2x-package)
-- [SignalR: metodi UseSignalR e UseConnections rimossi](#signalr-usesignalr-and-useconnections-methods-removed)
-- [File statici: il tipo di contenuto CSV modificato in standard-compliant](#static-files-csv-content-type-changed-to-standards-compliant)
+- [Azure: pacchetti di integrazione di Azure con prefisso Microsoft rimossi](#azure-microsoft-prefixed-azure-integration-packages-removed)
+- [SignalR: il protocollo dell'hub MessagePack è stato spostato nel pacchetto MessagePack 2. x](#signalr-messagepack-hub-protocol-moved-to-messagepack-2x-package)
+- [SignalR: Metodi UseSignalR e UseConnections rimossi](#signalr-usesignalr-and-useconnections-methods-removed)
+- [File statici: tipo di contenuto CSV modificato in conforme agli standard](#static-files-csv-content-type-changed-to-standards-compliant)
 
 [!INCLUDE[Azure: Microsoft-prefixed Azure integration packages removed](~/includes/core-changes/aspnetcore/5.0/azure-integration-packages-removed.md)]
 
@@ -38,7 +38,7 @@ Se si esegue la migrazione dalla versione 3.1 di .NET Core, ASP.NET Core o EF Co
 
 ## <a name="globalization"></a>Globalizzazione
 
-- [StringInfo e TextElementEnumerator sono ora conformi a UAX29](#stringinfo-and-textelementenumerator-are-now-uax29-compliant)
+- [StringInfo e TextElementEnumerator ora sono conformi a UAX29](#stringinfo-and-textelementenumerator-are-now-uax29-compliant)
 
 [!INCLUDE [uax29-compliant-grapheme-enumeration](../../../includes/core-changes/globalization/5.0/uax29-compliant-grapheme-enumeration.md)]
 
@@ -46,7 +46,17 @@ Se si esegue la migrazione dalla versione 3.1 di .NET Core, ASP.NET Core o EF Co
 
 ## <a name="windows-forms"></a>Windows Form
 
-- [API WinForms ora generano ArgumentNullException](#winforms-apis-now-throw-argumentnullexception)
+- [Rimossi controlli barra di stato](#removed-status-bar-controls)
+- [I metodi WinForms ora generano ArgumentException](#winforms-methods-now-throw-argumentexception)
+- [I metodi WinForms ora generano ArgumentNullException](#winforms-methods-now-throw-argumentnullexception)
+
+[!INCLUDE [winforms-deprecated-controls](../../../includes/core-changes/windowsforms/5.0/winforms-deprecated-controls.md)]
+
+***
+
+[!INCLUDE [invalid-args-cause-argumentexception](../../../includes/core-changes/windowsforms/5.0/invalid-args-cause-argumentexception.md)]
+
+***
 
 [!INCLUDE [null-args-cause-argumentnullexception](../../../includes/core-changes/windowsforms/5.0/null-args-cause-argumentnullexception.md)]
 
