--- a/docs/csharp/misc/cs0200.md
+++ b/docs/csharp/misc/cs0200.md
@@ -6,19 +6,21 @@ f1_keywords:
 helpviewer_keywords:
 - CS0200
 ms.assetid: 1990704a-edfa-4dbd-8477-d9c7aae58c96
-ms.openlocfilehash: ba292b9b36ac0eb264d3e40b69092d4e261320e1
-ms.sourcegitcommit: 73aa9653547a1cd70ee6586221f79cc29b588ebd
+ms.openlocfilehash: 7ee26e03f6fe58ab474ced623ed0feced74d745f
+ms.sourcegitcommit: c2c1269a81ffdcfc8675bcd9a8505b1a11ffb271
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2020
-ms.locfileid: "82102008"
+ms.lasthandoff: 04/25/2020
+ms.locfileid: "82158541"
 ---
 # <a name="compiler-error-cs0200"></a>Errore del compilatore CS0200
-La proprietà o l'indicizzatore 'proprietà' non può essere assegnato a - è di sola lettura
 
-È stato effettuato un tentativo di assegnare un valore a una [proprietà](../programming-guide/classes-and-structs/using-properties.md), ma la proprietà non dispone di una funzione di accesso set o l'assegnazione non rientra nel costruttore. Risolvere l'errore aggiungendo una funzione di accesso set. Per ulteriori informazioni, vedere [Come dichiarare e utilizzare le proprietà](../programming-guide/classes-and-structs/how-to-declare-and-use-read-write-properties.md)di scrittura in lettura .
+Non è possibile assegnare la proprietà o l'indicizzatore ' Property ' perché è di sola lettura
+
+È stato effettuato un tentativo di assegnare un valore a una [Proprietà](../programming-guide/classes-and-structs/using-properties.md), ma la proprietà non dispone di una funzione di accesso set o l'assegnazione non è compresa nel costruttore. Risolvere l'errore aggiungendo una funzione di accesso set. Per altre informazioni, vedere [come dichiarare e usare le proprietà di lettura/scrittura](../programming-guide/classes-and-structs/how-to-declare-and-use-read-write-properties.md).
 
 ## <a name="examples"></a>Esempi
+
 L'esempio seguente genera l'errore CS0200:
 
 ```csharp
@@ -49,7 +51,7 @@ public class Example
 }  
 ```
 
-Nell'esempio seguente [vengono utilizzate proprietà implementate automaticamente](../programming-guide/classes-and-structs/auto-implemented-properties.md), [inizializzatori](../programming-guide/classes-and-structs/object-and-collection-initializers.md)di oggetto e viene comunque generato l'errore CS0200:
+L'esempio seguente usa [proprietà implementate automaticamente](../programming-guide/classes-and-structs/auto-implemented-properties.md) e [inizializzatori di oggetto](../programming-guide/classes-and-structs/object-and-collection-initializers.md) e genera comunque CS0200:
 
 ```csharp
 // CS0200.cs
@@ -72,7 +74,7 @@ public class Example
 }
 ```
 
-L'assegnazione a una proprietà o a un indicizzatore 'proprietà' di sola lettura può essere ottenuta tramite l'aggiunta di una funzione di accesso set o l'assegnazione alla proprietà nel costruttore dell'oggetto.
+Per assegnare a una proprietà o a un indicizzatore ' Property ' di sola lettura, aggiungere una funzione di accesso set o assegnare il valore nel costruttore dell'oggetto.
 
 ```csharp
 public class Example
