--- a/docs/whats-new/2019-10.md
+++ b/docs/whats-new/2019-10.md
@@ -2,12 +2,12 @@
 title: Documentazione di .NET Novità (ottobre 2019)
 description: Novità di .NET docs nel 2019 ottobre.
 ms.date: 12/17/2019
-ms.openlocfilehash: 4e236af0c7fb404a8c1070b5d783dffff1026395
-ms.sourcegitcommit: 8b02d42f93adda304246a47f49f6449fc74a3af4
+ms.openlocfilehash: 1374f089cb1ad76e498c89e433fb8fd32cfb3d18
+ms.sourcegitcommit: c2c1269a81ffdcfc8675bcd9a8505b1a11ffb271
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/24/2020
-ms.locfileid: "82135536"
+ms.lasthandoff: 04/25/2020
+ms.locfileid: "82158554"
 ---
 # <a name="net-docs-whats-new-october-2019"></a>Documentazione di .NET Novità (ottobre 2019)
 
@@ -41,8 +41,8 @@ Introduzione alle novità di .NET docs per il 2019 ottobre. Questo articolo elen
 
 ### <a name="new-articles"></a>Nuovi articoli
 
-- [Assembly di riferimento](../standard/assembly/reference-assemblies.md) -argomento aggiungere assembly di riferimento
-- [System. io. Pipelines in .NET](../standard/io/pipelines.md) -documento pipeline-
+- [Assembly di riferimento](../standard/assembly/reference-assemblies.md) -articolo aggiungere assembly di riferimento
+- [System. io. Pipelines in .NET](../standard/io/pipelines.md) -articolo pipeline
 
 ### <a name="updated-articles"></a>Articoli aggiornati
 
